syntax = "proto3";

package com.emailclient.backend.grpc;

option java_multiple_files = true;
option java_package = "com.emailclient.backend.email.grpc";
option java_outer_classname = "EmailServiceProto";

import "google/protobuf/timestamp.proto";

message ListInboxRequest {}

message EmailPreviewMessage {
  string id = 1;
  string from = 2;
  string subject = 3;
  google.protobuf.Timestamp received_at = 4;
  bool unread = 5;
}

message ListInboxResponse {
  repeated EmailPreviewMessage emails = 1;
}

message SendEmailRequestMessage {
  string to = 1;
  repeated string cc = 2;
  repeated string bcc = 3;
  string subject = 4;
  string body = 5;
  repeated string attachments = 6;
}

message SendEmailResponse {}

message GetEmailRequest {
  string id = 1;
}

message EmailDetailMessage {
  string id = 1;
  string from = 2;
  string subject = 3;
  string body = 4;
  google.protobuf.Timestamp received_at = 5;
  bool unread = 6;
  repeated string to = 7;
  repeated string cc = 8;
}

message GetEmailResponse {
  EmailDetailMessage email = 1;
}

message ListSentRequest {}

message ListSentResponse {
  repeated EmailPreviewMessage emails = 1;
}

message DeleteEmailRequest {
  string id = 1;
}

message DeleteEmailResponse {
  bool success = 1;
}

message ListTrashRequest {}

message ListTrashResponse {
  repeated EmailPreviewMessage emails = 1;
}

message MoveToTrashRequest {
  string id = 1;
}

message MoveToTrashResponse {
  bool success = 1;
}

message PermanentlyDeleteRequest {
  string id = 1;
}

message PermanentlyDeleteResponse {
  bool success = 1;
}

service EmailService {
  rpc ListInbox (ListInboxRequest) returns (ListInboxResponse);
  rpc ListSent (ListSentRequest) returns (ListSentResponse);
  rpc ListTrash (ListTrashRequest) returns (ListTrashResponse);
  rpc SendEmail (SendEmailRequestMessage) returns (SendEmailResponse);
  rpc GetEmail (GetEmailRequest) returns (GetEmailResponse);
  rpc DeleteEmail (DeleteEmailRequest) returns (DeleteEmailResponse);
  rpc MoveToTrash (MoveToTrashRequest) returns (MoveToTrashResponse);
  rpc PermanentlyDelete (PermanentlyDeleteRequest) returns (PermanentlyDeleteResponse);
}

